[package]
name = "nym-zcash-rpc-pipes"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.11"
tokio-stream = "0.1.15"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
lazy_static = "1"
anyhow = "1"

nym-sdk = { git = "https://github.com/nymtech/nym", rev = "c6103891989855eea6471ef4f5f836dc5fbcbd19" }
nym-sphinx-addressing = { git = "https://github.com/nymtech/nym", rev = "c6103891989855eea6471ef4f5f836dc5fbcbd19" }
nym-bin-common = { git = "https://github.com/nymtech/nym", rev = "c6103891989855eea6471ef4f5f836dc5fbcbd19" }
nym-sphinx-anonymous-replies = { git = "https://github.com/nymtech/nym", rev = "c6103891989855eea6471ef4f5f836dc5fbcbd19" }
